--- a/PROGRAMACION/Relacion2/1.html
+++ b/PROGRAMACION/Relacion2/1.html
@@ -1,9 +1,7 @@
 <script>
     //Pide al usuario su edad y calcula en qué año nació.
     let edadUsuario = prompt("Introduce tu edad")
-    let añoActual = 2025
-    let resta = añoActual - edadUsuario
-    console.log("Naciste en " + resta)
-
-
+    let anioActual = 2025
+    let anioNacimiento = anioActual - edadUsuario
+    console.log("Naciste en " + anioNacimiento)
 </script>
