--- a/PROGRAMACION/Relacion2/2.html
+++ b/PROGRAMACION/Relacion2/2.html
@@ -1,7 +1,7 @@
 <script>
     //Pide al usuario el total de una cuenta y el porcentaje de propina que quiere dejar. Calcula y muestra la propina.
-    let cuentaUsuario = parseInt(prompt("¿Cuanto ha sido su cuenta?"))
-    let porcentajeDePropina = parseInt(prompt("¿Que porcentaje de propina quieres dejar?"))
-    let propina = (cuentaUsuario * porcentajeDePropina) / 100
-    console.log (propina + "euros")
+    let cuentaUsuario = parseFloat(prompt("¿Cuanto ha sido su cuenta?"))
+    let porcentajeDePropina = parseFloat(prompt("¿Que porcentaje de propina quieres dejar?"))
+    let propina = cuentaUsuario * (porcentajeDepropina / 100)
+    console.log (propina + " " + "€")
 </script>
