--- a/PROGRAMACION/Relacion2/4.html
+++ b/PROGRAMACION/Relacion2/4.html
@@ -1,10 +1,6 @@
 <script>
     //Pregunta al usuario su edad y calcula cuántos días le quedan para cumplir 80 años (usa una estimación de días).
     let edadUsuario = parseInt(prompt("¿Cuántos años tienes?"))
-    let añosHasta80 = 80 - edadUsuario
-    console.log (añosHasta80 * 365 + "dias")
-    
-
-    
-
+    let anioActual = 80 - edadUsuario
+    console.log (anioActual * 365 + "dias")
 </script>
