--- a/PROGRAMACION/Relacion2/11.html
+++ b/PROGRAMACION/Relacion2/11.html
@@ -1,7 +1,7 @@
 <script>
-
-
-
-
-    
+//Pide una cantidad de segundos y conviértela a horas, minutos y segundos.
+let segundos = parseInt(prompt("Introduce una cantidad de segundos"))
+let minutos = segundos / 60
+let horas = minutos / 60
+console.log(segundos + " " + "segundos" + " " + minutos + " " + "minutos" + " " + "y " + horas + " " + "horas")  
 </script>
