--- a/PROGRAMACION/Relacion2/10.html
+++ b/PROGRAMACION/Relacion2/10.html
@@ -1,7 +1,7 @@
 <script>
-//Pide al usuario una cantidad de minutos y conviértela a horas y minutos (por ejemplo, 150 minutos son 2 horas y 30 minutos).
-let minutos= parseInt(prompt("Dime una cantidad de minutos"))
-let hora= parseInt (minutos/60)
-let minutosRestantes= minutos%60
-console.log("esos minutos son" + " " + hora + "horas y" + " " + minutos + " " + "minutos") 
+    //Pide al usuario una cantidad de minutos y conviértela a horas y minutos (por ejemplo, 150 minutos son 2 horas y 30 minutos).
+    let minutos = parseInt(prompt("Dime una cantidad de minutos"))
+    let hora = parseInt(minutos / 60)
+    let minutosRestantes = minutos % 60
+    console.log("esos minutos son " + hora + " horas y " + + minutosRestantes + " minutos") 
 </script>
