--- a/PROGRAMACION/Relacion2/11.html
+++ b/PROGRAMACION/Relacion2/11.html
@@ -1,7 +1,11 @@
 <script>
-//Pide una cantidad de segundos y conviértela a horas, minutos y segundos.
-let segundos = parseInt(prompt("Introduce una cantidad de segundos"))
-let minutos = segundos / 60
-let horas = minutos / 60
-console.log(segundos + " " + "segundos" + " " + minutos + " " + "minutos" + " " + "y " + horas + " " + "horas")  
+let segundosUsuario = Number(prompt ("Introduzca cantidad de segundos:"))
+
+let minutosTotales = parseInt( segundosUsuario / 60)
+let segundos = segundosUsuario % 60
+
+let horas = parseInt( minutosTotales / 60 )
+let minutos = minutosTotales % 60
+
+console.log(segundosUsuario + " segundos son " + horas + " horas, " + minutos + " minutos y " + segundos + " segundos")
 </script>
