--- a/PROGRAMACION/Relacion3/10.html
+++ b/PROGRAMACION/Relacion3/10.html
@@ -1,25 +1,24 @@
 <script>
-//Pide al usuario su calificación (entre 0 y 100) y devuelve su letra correspondiente
-//A (90-100). B (80-89). C (70-79). D (60-69). F (0-59).
-let calificacionUsuario = prompt("Introduce tu calificacion")
-calificacionUsuario = Number
-if (calificacionUsuario >= 0 && calificacionUsuario <= 100 ) {
-    let letra
-    if (calificacionUsuario >=90) {
-        letra = "A"
-     } if else (calificacionUsuario >=80) {
-        letra = "B"
-      } if else (calificacionUsuario >= 70) {
-        letra = "C"
-       } if else (calificacionUsuario >=60)
-        letra = "D"
-       } else {
-        letra = "F"
-       } 
-       console.log("Tu calificacion es " + letra)
+    //Pide al usuario su calificación (entre 0 y 100) y devuelve su letra correspondiente
+    //A (90-100). B (80-89). C (70-79). D (60-69). F (0-59).
+    //Meter calificacion inválida
+    let mensaje = ""
+    let calificacionUsuario = parseInt(prompt("Introduce tu calificaión"))
+    if (calificacionUsuario >= 0 && calificacionUsuario < 100) {
+               console.log("Correcto");
     } else {
-        console.log ("La calificaion debe estar entre 0 y 100")
-
+        console.log("Calificacion incorrecta");    
     }
-
+    if (calificacionUsuario <= 59) {
+        console.log("Tu calificación es F");
+        
+    }else if (calificacionUsuario <= 69) {
+        console.log ("Tu calificación es D")
+    } else if (calificacionUsuario <= 79) {
+        console.log ("Tu calificación es C")
+    } else if (calificacionUsuario <= 89) {
+        console.log ("Tu calificaion es B")
+    } else if (calificacionUsuario >= 90){
+        console.log ("Tu calificación es A")
+    } 
 </script>
