--- a/PROGRAMACION/Relacion3/11.html
+++ b/PROGRAMACION/Relacion3/11.html
@@ -7,22 +7,22 @@
         if (numberUser = 1) {
             console.log("Hoy es lunes");
 
-        } else if (numberUser = 2) {
+        } else if (numberUser == 2) {
             console.log("Hoy es martes");
 
-        } else if (numberUser = 3) {
+        } else if (numberUser == 3) {
             console.log("Hoy es Miercoles");
 
-        } else if (numberUser = 4) {
+        } else if (numberUser == 4) {
             console.log("Hoy es Jueves");
 
-        } else if (numberUser = 5) {
+        } else if (numberUser == 5) {
             console.log("Hoy es Viernes");
 
-        } else if (numberUser = 6) {
+        } else if (numberUser == 6) {
             console.log("Hoy es Sábado");
 
-        } else if (numberUser = 7) {
+        } else if (numberUser == 7) {
             console.log("Hoy es Domingo");
 
         }
