--- a/PROGRAMACION/Relacion3/13.html
+++ b/PROGRAMACION/Relacion3/13.html
@@ -2,10 +2,10 @@
     //Pide una letra al usuario e indica si es una vocal (a, e, i, o, u) o una consonante.
 
     let letraUser = prompt("Introduce una letra")
-    letraUser = letraUser.toLowerCase
+    letraUser = letraUser.toLowerCase()
     let mensaje = ""
     if (letraUser == "a" ||
-        letraUser == "e" || 
+        letraUser == "e" ||
         letraUser == "i" ||
         letraUser == "o" ||
         letraUser == "u") {
