--- a/PROGRAMACION/Relacion3/14.html
+++ b/PROGRAMACION/Relacion3/14.html
@@ -10,7 +10,7 @@
         mensaje = "Muy frio"
     } else if (tempeAct <= 15) {
         mensaje = "Frio"
-    } else if (tempeAct <= 16 && tempeAct <= 25) {
+    } else if (tempeAct >= 16 && tempeAct <= 25) {
         mensaje = "Templado"
     } else if (tempeAct > 25) {
         mensaje = "caliente"
