--- a/PROGRAMACION/Relacion3/22.html
+++ b/PROGRAMACION/Relacion3/22.html
@@ -1,13 +1,21 @@
 <script>
-    //Pide a dos jugadores que ingresen "piedra", "papel" o "tijera" y determina el ganador según las reglas del juego.
+  let playerUser1 = prompt("Jugador1: elige piedra, papel o tijeras");
+  let playerUser2 = prompt("Jugador2: elige piedra, papel o tijeras");
+  let mensaje = "";
 
-    let jugadorPrim = prompt("Elige entre piedra papel o tijeras")
-    let jugadorSeg = prompt("Elige entre piedra papel o tijeras")
-    let mensaje = ""
-    
-
-
-
-
-
+  if (
+    playerUser1 != "piedra" ||
+    playerUser1 != "papel" ||
+    playerUser1 != "tijeras"
+  ) {
+    mensaje = "Porfas J1 enseñame algo";
+    console.log(mensaje);
+  } else if (
+    playerUser2 != "piedra" ||
+    playerUser2 != "papel" ||
+    playerUser2 != "tijeras"
+  ) {
+    mensaje = "Porfas J2 enseñame algo";
+    console.log(mensaje);
+  }
 </script>
