--- a/PROGRAMACION/Relacion3/Extra.html
+++ b/PROGRAMACION/Relacion3/Extra.html
@@ -1,25 +1,20 @@
 <script>
-//Crea un programa que pida al usuario su salario anual y calcule los impuestos a pagar aplicando un sistema progresivo por tramos:
-//Los primeros 10.000 € no pagan impuestos.
-//Los siguientes 10.000 € (de 10.001 € a 20.000 €) pagan el 10%.
-//Los siguientes 20.000 € (de 20.001 € a 40.000 €) pagan el 20%.
-//Todo lo que supere los 40.000 € paga el 30%.
-//El programa debe mostrar:
-//Los impuestos totales a pagar.
-//El tipo efectivo de impuestos (es decir, el porcentaje real sobre el salario que representa la cantidad de impuestos).
+  //Crea un programa que pida al usuario su salario anual y calcule los impuestos a pagar aplicando un sistema progresivo por tramos:
+  //Los primeros 10.000 € no pagan impuestos.
+  //Los siguientes 10.000 € (de 10.001 € a 20.000 €) pagan el 10%.
+  //Los siguientes 20.000 € (de 20.001 € a 40.000 €) pagan el 20%.
+  //Todo lo que supere los 40.000 € paga el 30%.
+  //El programa debe mostrar:
+  //Los impuestos totales a pagar.
+  //El tipo efectivo de impuestos (es decir, el porcentaje real sobre el salario que representa la cantidad de impuestos).
 
-let salarioUser = Number(prompt("¿Cual es tu salario anual"))
-let mensaje = ""
-if (salarioUser <= 10000){
-    mensaje = "No pagaras impuestos"
-} else if (salarioUser >10000 && salarioUser <=20000){
-    mensaje = "Pagaras un 10% de impuestos, un total de " + salarioUser * 0.1 + " euros"
-} else if (salarioUser >20000 && salarioUser <=40000){
-    mensaje = "Pagaras un 20 % de impuestos, un total de " + salarioUser * 0.2
-}
-
-
-
-
-
+  let salarioUser = Number(prompt("¿Cual es tu salario anual"))
+  let mensaje = ""
+  if (salarioUser <= 10000){
+      mensaje = "No pagaras impuestos"
+  } else if (salarioUser >10000 && salarioUser <=20000){
+      mensaje = "Pagaras un 10% de impuestos, un total de " + salarioUser * 0.1 + " euros"
+  } else if (salarioUser >20000 && salarioUser <=40000){
+      mensaje = "Pagaras un 20 % de impuestos, un total de " + salarioUser * 0.2
+  } else if ()
 </script>
