--- a/PROGRAMACION/Relacion3/19.html
+++ b/PROGRAMACION/Relacion3/19.html
@@ -11,7 +11,7 @@ let precioExtra  = 3
 let userTime = Number(prompt("¿Cuántas horas has estado estacionado?"))
 let duracion = userTime
 //Declaramos error para el 0 . if 
- if (!(duracion <= 0)) {
+ if (!(duracion = 0)) {
     console.log("Entrada no válida. Introduzca un número mayor o igual a 0.")
 let precio = 0;
 
