--- a/PROGRAMACION/Relacion5/1.html
+++ b/PROGRAMACION/Relacion5/1.html
@@ -1,8 +1,8 @@
 <script>
-//Solicitar un color. Mostrar por pantalla 5 veces el color.
+  // Solicitar un color. Mostrar por pantalla 5 veces el color.
 
-let colorUser = prompt("Introduce un color")
-for (let i = 0; i < 5; i++){
-console.log(colorUser);
-}   
+  let colorUser = prompt("Introduce un color");
+  for (let i = 0; i < 5; i++) {
+    console.log(colorUser);
+  }
 </script>
