--- a/PROGRAMACION/Relacion5/2.html
+++ b/PROGRAMACION/Relacion5/2.html
@@ -1,12 +1,8 @@
 <script>
-//Solicitar un color. Mostrar por pantalla 5 veces el color separado por espacios.
-let colourUser = prompt("Introduce un color")
-let i=0
-let resultado = " "
-for (i = 0; i < 5; i++){
-    console.log(colourUser) ;
-    
-}
-
-
+  //Solicitar un color. Mostrar por pantalla 5 veces el color separado por espacios.
+  let colourUser = prompt("Introduce un color");
+  let i = 0;
+  for (i = 0; i < 5; i++) {
+    console.log(colourUser);
+  }
 </script>
