--- a/PROGRAMACION/Relacion5/7.html
+++ b/PROGRAMACION/Relacion5/7.html
@@ -3,14 +3,13 @@
   let numberUser = Number(prompt("Introduce un numero entero"));
   if (numberUser % 1 !== 0) {
     console.log("Introduce un numero entero");
-  } else if (numberUser == 0) {
-    console.log("Tu numero tiene que ser mayor que 0");
-  }
-  for (let i = numberUser; i >= 0; i--) {
+  } 
+  
+  for ( i = numberUser; i >= 0; i--) {
     console.log(i);
   }
 
-  for (let i = numberUser; i <= 0; i++) {
+  for ( i = numberUser; i <= 0; i++) {
     console.log(i);
   }
 </script>
