--- a/PROGRAMACION/Relacion5/9.html
+++ b/PROGRAMACION/Relacion5/9.html
@@ -1,4 +1,14 @@
 <script>
   //Solicitar un número entero. Mostrar por pantalla todos los números impares desde 0 hasta el número.
-  let;
+  let numberUser = Number(prompt("Introduce un numero"))
+  if (numberUser % 1 !== 0){
+    console.log("Tu numero no puede tener decimales");
+  }
+  for (let i = 1; i <= numberUser; i+=2){
+    console.log(i);  
+  }
+  
+  for (let i = 1; i >= numberUser; i -=2){
+    console.log(i);   
+  }
 </script>
