--- a/LM/Copiar y pegar examen/AountesCopia.html
+++ b/LM/Copiar y pegar examen/AountesCopia.html
@@ -121,3 +121,14 @@
         </xs:restriction>
     </xs:simpleType>
 </xs:element>
+
+## Codigo postal
+
+</xs:element>
+<xs:element name="codigoP">
+    <xs:simpleType>
+        <xs:restriction base="xs:string">
+            <xs:pattern value="[0-9]{5}" />
+        </xs:restriction>
+    </xs:simpleType>
+</xs:element>
