--- a/LM/Copiar y pegar examen/AountesCopia.html
+++ b/LM/Copiar y pegar examen/AountesCopia.html
@@ -31,7 +31,7 @@
 <xs:element name="nombre">
     <xs:simpleType>
         <xs:restriction base="xs:string">
-            <minLenght value="1" />
+            <xs:minLenght value="1" />
             <xs:pattern value="[A-Z].*" />
         </xs:restriction>
     </xs:simpleType>
