--- a/PROGRAMACION/Relacion5/12.html
+++ b/PROGRAMACION/Relacion5/12.html
@@ -1,10 +1,14 @@
 <script>
    //Solicitar un número entero. Mostrar el siguiente número múltiplo de 2 a partir del.
 
-   let numberUser = Number(prompt("Introduce un numero entero"))
-   let nextNumber = numberUser + 1
-   while (nextNumber % 2 != 0) {
-      nextNumber++
+   let numberUser = prompt("Introduce un número entero:")
+   let entrada = numberUser
+   numberUser++ // numberUser = numberUser + 1 o numberUser += 1
+
+   while (numberUser % 2 != 0) {
+      numberUser++
+      numberUser = Number(prompt("ERROR. el numero debe de ser multiplo de 2 "))
    }
-   console.log(nextNumber);
+
+   console.log("El siguiente numberUser multiplo de dos despues del " + entrada + " es el " + numberUser)
 </script>
