--- a/PROGRAMACION/Relacion5/15.html
+++ b/PROGRAMACION/Relacion5/15.html
@@ -2,7 +2,7 @@
   //Solicitar un número entero. Mostrar el siguiente número múltiplo de 2 y 3 a partir del número.
   let numberUser = Number(prompt("Introduce un numero"));
   let nextNumber = numberUser++;
-  while (nextNumber % 6 !== 0) {
+  while ((nextNumber % 2 !== 0) || (nextNumber % 3 !== 0)) {
     nextNumber++;
   }
   console.log(nextNumber);
