--- a/PROGRAMACION/Relacion5/16.html
+++ b/PROGRAMACION/Relacion5/16.html
@@ -2,8 +2,8 @@
   //Solicitar un número entero. Mostrar el siguiente número múltiplo de 2 y 5 a partir del número.
   let numberUser = Number(prompt("Introduce un numero"));
   let nextNumber = nextNumber++;
-  while (nextNumber % 10 !== 0) {
-    nextNumber;
+  while  ((nextNumber % 2 !== 0) || (nextNumber % 5 !== 0)) {
+    nextNumber++; 
   }
   console.log(nextNumber);
 </script>
