--- a/PROGRAMACION/Relacion5/17.html
+++ b/PROGRAMACION/Relacion5/17.html
@@ -2,8 +2,9 @@
   //Solicitar un número entero. Mostrar el siguiente número múltiplo de 3 y 5 a partir del número.
   let numberUser = Number(prompt("Introduce un numero"));
   let nextNumber = nextNumber++;
-  while (nextNumber % 15 !== 0) {
-    nextNumber;
+   while ((nextNumber % 3 !== 0) || (nextNumber % 5 !== 0)) {
+
+    nextNumber++;
   }
   console.log(nextNumber);
 </script>
