--- a/PROGRAMACION/Relacion5/2.html
+++ b/PROGRAMACION/Relacion5/2.html
@@ -1,8 +1,11 @@
 <script>
   //Solicitar un color. Mostrar por pantalla 5 veces el color separado por espacios.
-  let colourUser = prompt("Introduce un color");
-  let i = 0;
-  for (i = 0; i < 5; i++) {
-    console.log(colourUser);
-  }
+let color = prompt("Introduce un color:")
+let salida = ""
+
+for (let i = 0; i < 5; i++) {
+    salida += color + " "
+}
+
+console.log(salida)
 </script>
