--- a/PROGRAMACION/Relacion5/3.html
+++ b/PROGRAMACION/Relacion5/3.html
@@ -1,11 +1,11 @@
 <script>
   //Solicitar un color. Mostrar por pantalla 5 veces el color separado por guiones.
-  let colorUser = prompt("color");
-  for (i = 0; i < 5; i++) {
-    if (i < 4) {
-      console.log(colorUser + "-");
-    } else {
-      console.log(colorUser);
-    }
+  let color = prompt("Introduce un color:")
+  let salida = ""
+
+  for (let i = 0; i < 5; i++) {
+    salida += color + "-"
   }
+
+  console.log(salida)
 </script>
