--- a/PROGRAMACION/Relacion5/6.html
+++ b/PROGRAMACION/Relacion5/6.html
@@ -1,13 +1,8 @@
 <script>
   //Solicitar un número entero. Mostrar por pantalla todos los números desde 0 hasta el número.
-  let numberUser = Number(prompt("Introduce un numero"));
-  // numberUser % 1 !== 0. Si el resto no es 0 no es entero
-  if (numberUser % 1 !== 0) {
-    console.log("Debes de poner un numero entero");
-  } else if (numberUser == 0) {
-    console.log("El numero debe ser mayor que 0");
-  }
-  for (let i = 0; i <= numberUser; i++) {
-    console.log(i);
-  }
+let numero = prompt("Introduce un número entero:")
+numero = Number(numero)
+for (let i = 0; i <= numero; i++) {
+  console.log(i)
+}
 </script>
