--- a/PROGRAMACION/Relacion5/8.html
+++ b/PROGRAMACION/Relacion5/8.html
@@ -1,16 +1,11 @@
 <script>
 //Solicitar un número entero. Mostrar por pantalla todos los números pares desde
 //0 hasta el número.
-let numberUser = Number(prompt("Introduce un numero"))
+let numero = prompt("Introduce un número entero:")
+numero = Number(numero)
 
-if (numberUser % 1 !== 0){
-    console.log("No puede tener decimales");   
-}
-for (let i = 0; i<=numberUser; i+=2){
-    console.log(i)  
-}
-for (let i = 0; i>=numberUser; i-=2){
-    console.log(i);   
+for (let i = 0; i <= numero; i+=2) {
+    console.log(i)
 }
 
 </script>
